--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "redux-persist": "^6.0.0",
+    "sanitize-html": "^2.11.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
