--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
     "@reduxjs/toolkit": "^1.9.5",
     "fast-xml-parser": "^4.2.5",
     "html-react-parser": "^4.2.0",
-    "localforage": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
-    "redux-persist": "^6.0.0",
-    "sanitize-html": "^2.11.0",
-    "uuid": "^9.0.0"
+    "react-use-audio-player": "^2.1.1",
+    "sanitize-html": "^2.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
